<resources>
    <string name="app_name">HD_ACS</string>
    <string name="textEnter">Вход</string>
    <string name="txtLogin">Никнейм</string>
    <string name="txtHlpLeft">txtHlpLeft</string>
    <string name="txtHlpRight">txtHlpRight</string>
    <string name="txtNavLeftHeader">Тех. процесс</string>
    <string name="txtNavRightHeader">Отчёты</string>
    <string name="txtWrkPrs">Отчёты: Продуктивность</string>
    <string name="txtManufProd">Отчёты: Произведённая продукция</string>
    <string name="txtDefProd">Отчёты: Забракованная продукция</string>
    <string name="txtStorage">Отчёты: Склад</string>
    <string name="txtManufProdCrt">Создать отчёт: Произведённая продукция</string>
    <string name="txtDefProdCrt">Создать отчёт: Забракованная продукция</string>
    <string name="txtStorageCrt">Создать отчёт: Склад</string>
    <string name="txtHats">Головные уборы</string>
    <string name="txtMerch">Аксессуары</string>

    <string name="txtPanama">Панама</string>
    <string name="txtPanamaCrt">Поузловая обработка головного убора - ПАНАМА</string>
    <string name="txtHat">Шляпа</string>
    <string name="txtVisor">Козырёк</string>
    <string name="txtKartuz">Картуз</string>
    <string name="txtCap">Кепка</string>
    <string name="txtBeretFr">Французкий берет</string>
    <string name="txtBeretVol">Объёмный берет</string>
    <string name="txtBeretCz">Берет Чехия</string>
    <string name="txtCapLinda">Кепка Линда</string>
    <string name="txtUshanka">Ушанка</string>
    <string name="txtJockeyka">Жокейка</string>
    <string name="txtJockeykaFurr">Жокейка с мех. ушками</string>
    <string name="txtEightblade">Восьмиклинка</string>
    <string name="txtScarf">Шарф</string>
    <string name="txtKerchief">Косынка</string>
    <string name="txtShopper">Сумка шопер</string>

    <string name="edtTxtModelHint">Модель</string>
    <string name="edtTxtMaterialHint">Материал</string>
    <string name="edtTxtColorHint">Цвет</string>
    <string name="edtTxtWorkerHint">Сотрудник</string>
    <string name="edtTxtAmountHint">Количество</string>

    <string name="btnSelectPost">Выберите должность</string>
    <string name="btnSelectSeamstress">Швея</string>
    <string name="btnSelectTechnologist">Технолог</string>
    <string name="btnRegistr">Регистрация</string>
    <string name="btnEnter">Войти</string>
    <string name="btnWrkPrs">Успеваемость</string>
    <string name="btnManufProd">Произведённая продукция</string>
    <string name="btnDefProd">Забракованная продукция</string>
    <string name="btnStorage">Склад</string>
    <string name="btnStorageCrt">Создать отчёт по складу</string>
    <string name="btnManufProdCrt">Создать отчёт по произведённой продукции</string>
    <string name="btnDefProdCrt">Создать отчёт по забракованной продукции</string>
    <string name="btnCrtReport">Создать отчёт</string>

    <string name="options">Опции</string>
    <string name="productivity">Продуктивность</string>
    <string name="hnt_login">Введите имя</string>
    <string name="hnt_password">Введите пароль</string>
    <string name="hnt_email">Введите ваш e-mail</string>

    <string name="imgbtnoptions">imgBtnOptions</string>
    <string name="imgbtnoprofile">imgbtnoprofile</string>

    <string name="none"></string>


    <!--    Новый список строк-->
    <string name="snos_uspevaemosti">\n20.05.2022 17:40\n\nСотрудник:Елена\n\nПроизведено:15\n\nБрак:1\n</string>
    <string name="snos_uspevaemosti2">\n20.05.2022 17:10\n\nСотрудник:Анджела\n\nПроизведено:13\n\nБрак:3\n</string>
    <string name="snos_uspevaemosti3">\n20.05.2022 17:16\n\nСотрудник:Олеся\n\nПроизведено:15\n\nБрак:1\n</string>
    <string name="snos_uspevaemosti4">\n20.05.2022 17:15\n\nСотрудник:Елена\n\nПроизведено:13\n\nБрак:3\n</string>
    <string name="snos_uspevaemosti5">\n20.05.2022 17:00\n\nСотрудник:Анастасия\n\nПроизведено:14\n\nБрак:3\n</string>
    <string name="snos_uspevaemosti6">\n20.05.2022 15:40\n\nСотрудник:Ирина\n\nПроизведено:14\n\nБрак:2\n</string>
    <string name="snos_uspevaemosti7">\n20.05.2022 15:20\n\nСотрудник:Алёна\n\nПроизведено:15\n\nБрак:3\n</string>
    <string name="snos_uspevaemosti8">\n20.05.2022 15:15\n\nСотрудник:Дарья\n\nПроизведено:13\n\nБрак:1\n</string>
    <string name="snos_uspevaemosti9">\n20.05.2022 15:15\n\nСотрудник:Галина\n\nПроизведено:12\n\nБрак:2\n</string>
    <string name="snos_uspevaemosti10">\n20.05.2022 15:10\n\nСотрудник:Марина\n\nПроизведено:14\n\nБрак:3\n</string>
    <string name="snos_uspevaemosti11">\n20.05.2022 14:45\n\nСотрудник:Юлия\n\nПроизведено:14\n\nБрак:0\n</string>
    <string name="snos_uspevaemosti12">\n20.05.2022 14:10\n\nСотрудник:Ольга\n\nПроизведено:10\n\nБрак:1\n</string>
    <string name="snos_uspevaemosti13">\n20.05.2022 13:50\n\nСотрудник:Тьяна\n\nПроизведено:7\n\nБрак:3\n</string>
    <string name="snos_uspevaemosti14">\n20.05.2022 13:10\n\nСотрудник:Нурана\n\nПроизведено:6\n\nБрак:0\n</string>
    <string name="snos_uspevaemosti15">\n20.05.2022 13:02\n\nСотрудник:Татьяна\n\nПроизведено:5\n\nБрак:2\n</string>

    <string name="snos_defprod">\n20.02.2022 17:40\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Елена\n\nКоличество:1\n</string>
    <string name="snos_defprod2">\n20.02.2022 17:10\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Анджела\n\nКоличество:3\n</string>
    <string name="snos_defprod3">\n20.02.2022 17:16\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Олеся\n\nКоличество:1\n</string>
    <string name="snos_defprod4">\n20.02.2022 17:15\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Елена\n\nКоличество:3\n</string>
    <string name="snos_defprod5">\n20.02.2022 17:00\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Анастасия\n\nКоличество:3\n</string>
    <string name="snos_defprod6">\n20.02.2022 15:40\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Ирина\n\nКоличество:2\n</string>
    <string name="snos_defprod7">\n20.02.2022 15:20\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Алёна\n\nКоличество:3\n</string>
    <string name="snos_defprod8">\n20.02.2022 15:15\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Дарья\n\nКоличество:1\n</string>
    <string name="snos_defprod9">\n20.02.2022 15:15\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Галина\n\nКоличество:2\n</string>
    <string name="snos_defprod10">\n20.02.2022 15:10\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Марина\n\nКоличество:3\n</string>
    <string name="snos_defprod11">\n20.02.2022 14:10\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Ольга\n\nКоличество:1\n</string>
    <string name="snos_defprod12">\n20.02.2022 13:50\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Тьяна\n\nКоличество:3\n</string>
    <string name="snos_defprod13">\n20.02.2022 13:02\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Татьяна\n\nКоличество:2\n</string>

    <string name="snos_prod">\n20.02.2022 17:40\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Елена\n\nКоличество:15\n</string>
    <string name="snos_prod2">\n20.02.2022 17:10\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Анджела\n\nКоличество:13\n</string>
    <string name="snos_prod3">\n20.02.2022 17:16\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Олеся\n\nКоличество:15\n</string>
    <string name="snos_prod4">\n20.02.2022 17:15\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Елена\n\nКоличество:13\n</string>
    <string name="snos_prod5">\n20.02.2022 17:00\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Анастасия\n\nКоличество:14\n</string>
    <string name="snos_prod6">\n20.02.2022 15:40\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Ирина\n\nКоличество:14\n</string>
    <string name="snos_prod7">\n20.02.2022 15:20\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Алёна\n\nКоличество:15\n</string>
    <string name="snos_prod8">\n20.02.2022 15:15\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Дарья\n\nКоличество:13\n</string>
    <string name="snos_prod9">\n20.02.2022 15:15\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Галина\n\nКоличество:12\n</string>
    <string name="snos_prod10">\n20.05.2022 15:10\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Марина\n\nКоличество:14\n</string>
    <string name="snos_prod11">\n20.05.2022 14:45\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Юлия\n\nКоличество:14\n</string>
    <string name="snos_prod12">\n20.05.2022 14:10\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Ольга\n\nКоличество:10\n</string>
    <string name="snos_prod13">\n20.05.2022 13:50\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Тьяна\n\nКоличество:7\n</string>
    <string name="snos_prod14">\n20.05.2022 13:10\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Нурана\n\nКоличество:6\n</string>
    <string name="snos_prod15">\n20.05.2022 13:02\n\nМодель: Картуз\n\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nСотрудник:Татьяна\n\nКоличество:5\n</string>

    <string name="snos_stor">\nМатериал: Кашемир\n\nЦвет: Чёрный\n\nКоличество:1\n</string>
    <string name="snos_stor2">\nМатериал: Кашемир\n\nЦвет: Белый\n\nКоличество:8\n</string>
    <string name="snos_stor3">\nМатериал: Эко-кожа\n\nЦвет: Чёрный\n\nКоличество:10\n</string>
    <string name="snos_stor4">\nМатериал: Эко-кожа\n\nЦвет: Белый\n\nКоличество:14\n</string>
    <string name="snos_stor5">\nМатериал: Пальто\n\nЦвет: Чёрный\n\nКоличество:7\n</string>
    <string name="snos_stor6">\nМатериал: Пальто\n\nЦвет: Белый\n\nКоличество:8\n</string>
    <string name="snos_stor7">\nМатериал: Плащево-курточные\n\nЦвет: Чёрный\n\nКоличество:4\n</string>
    <string name="snos_stor8">\nМатериал: Плащево-курточные\n\nЦвет: Белый\n\nКоличество:6\n</string>
    <string name="snos_stor9">\nМатериал: Эко-нейлон\n\nЦвет: Чёрный\n\nКоличество:6\n</string>
    <string name="snos_stor10">\nМатериал: Эко-нейлон\n\nЦвет: Белый\n\nКоличество:2\n</string>
    <string name="snos_stor11">\nМатериал: Ангора\n\nЦвет: Чёрный\n\nКоличество:2\n</string>
    <string name="snos_stor12">\nМатериал: Ангора\n\nЦвет: Белый\n\nКоличество:5\n</string>
    <string name="snos_stor13">\nМатериал: Шерсть\n\nЦвет: Чёрный\n\nКоличество:9\n</string>
    <string name="snos_stor14">\nМатериал: Шерсть\n\nЦвет: Белый\n\nКоличество:5\n</string>
    <string name="title_activity_day_night">DayNightActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Изменить тему</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>