<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/hdlogo"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:paddingLeft="100dp"
            android:paddingRight="100dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/hdlogo" />

        <TextView
            android:id="@+id/textEnter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/eldwin_script_semi_bold"
            android:gravity="center_horizontal"
            android:textColor="@color/theme"
            android:text="@string/textEnter"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="60sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnEnter"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/theme"
                android:fontFamily="@font/eldwin_script_semi_bold"
                android:onClick="btnEnter"
                android:text="@string/btnEnter"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnRegistr"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/theme"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/eldwin_script_semi_bold"
                android:onClick="btnRegistr"
                android:text="@string/btnRegistr"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="35sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>